--- a/index.html
+++ b/index.html
@@ -3,10 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CI/CD Pipeline - AWS Generation</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Moving Shapes</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <script src="scripts.js"></script>
+
+<div id="container">
+</div>
+
+<div id="overlay-container">
+  <h2>ALEX</h2>
+  <h2>PHILLIP</h2>
+  <h4></h4>
+  <p>project</p>
+  <p>portfolio.</p>
+</div>
+
+<button id="toggleCollisionBtn">Disable collisions</button>
+
+<script src="script.js"></script>
 </body>
 </html>
