dark/light mode

--- a/index.html
+++ b/index.html
@@ -12,14 +12,15 @@
 </div>
 
 <div id="overlay-container">
-  <h2>ALEX</h2>
+  <h2>AL</h2>
   <h2>PHILLIP</h2>
   <h4></h4>
   <p>project</p>
   <p>portfolio.</p>
 </div>
 
-<button id="toggleCollisionBtn">Disable collisions</button>
+<button id="toggleCollisionBtn">Disable Collisions</button>
+<button id="toggleThemeBtn">Light Mode</button>
 
 <script src="script.js"></script>
 </body>
