Change colours/reset colours btns

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 
 <button id="toggleCollisionBtn">Disable Collisions</button>
 <button id="toggleThemeBtn">Light Mode</button>
+<button id="changeColorBtn">Change Colors</button>
+<button id="resetColorBtn">Reset Colors</button>
 
 <script src="script.js"></script>
 </body>
