--- a/index.html
+++ b/index.html
@@ -19,10 +19,12 @@
   <p>portfolio.</p>
 </div>
 
+<div class="btn-ctnr">
 <button id="toggleCollisionBtn">Disable Collisions</button>
 <button id="toggleThemeBtn">Light Mode</button>
 <button id="changeColorBtn">Change Colors</button>
 <button id="resetColorBtn">Reset Colors</button>
+</div>
 
 <script src="script.js"></script>
 </body>
