--- a/index.html
+++ b/index.html
@@ -8,8 +8,31 @@
 </head>
 <body>
 
-<div id="container">
+<!-- Hamburger Menu for Mobile -->
+<div class="hamburger-menu" id="hamburgerMenu">
+    <div class="bar"></div>
+    <div class="bar"></div>
+    <div class="bar"></div>
 </div>
+
+<!-- Full Page Menu for Mobile -->
+<div class="full-page-menu" id="fullPageMenu">
+    <a href="#">Home</a>
+    <a href="#">Wordoodle</a>
+    <a href="#">Project 2 (Quizzz)</a>
+    <a href="#">Project 3 (ISYFL)</a>
+    <a href="#">Project 4 (Circles)</a>
+</div>
+
+<!-- Nav Bar for Desktop -->
+<nav class="navbar">
+    <a href="#">Link 1</a>
+    <a href="#">Link 2</a>
+    <a href="#">Link 3</a>
+    <a href="#">Link 4</a>
+</nav>
+
+<div id="container"></div>
 
 <div id="overlay-container">
   <h2>AL</h2>
