Navbar: light mode

--- a/index.html
+++ b/index.html
@@ -26,10 +26,11 @@
 
 <!-- Nav Bar for Desktop -->
 <nav class="navbar">
-    <a href="#">Link 1</a>
-    <a href="#">Link 2</a>
-    <a href="#">Link 3</a>
-    <a href="#">Link 4</a>
+  <a href="#">Home</a>
+  <a href="#">Wordoodle</a>
+  <a href="#">Project 2 (Quizzz)</a>
+  <a href="#">Project 3 (ISYFL)</a>
+  <a href="#">Project 4 (Circles)</a>
 </nav>
 
 <div id="container"></div>
