nav links: href url

--- a/index.html
+++ b/index.html
@@ -18,18 +18,18 @@
 <!-- Full Page Menu for Mobile -->
 <div class="full-page-menu" id="fullPageMenu">
     <a href="#">Home</a>
-    <a href="#">Wordoodle</a>
+    <a href="https://github.com/alexjp87/Wordoodle" target="_blank">Wordoodle</a>
     <a href="#">Project 2 (Quizzz)</a>
-    <a href="#">Project 3 (ISYFL)</a>
+    <a href="https://github.com/alexjp87/If-Sometimes-You-Feel-Lost" target="_blank">Project 3 (ISYFL)</a>
     <a href="#">Project 4 (Circles)</a>
 </div>
 
 <!-- Nav Bar for Desktop -->
 <nav class="navbar">
   <a href="#">Home</a>
-  <a href="#">Wordoodle</a>
+  <a href="https://github.com/alexjp87/Wordoodle" target="_blank">Wordoodle</a>
   <a href="#">Project 2 (Quizzz)</a>
-  <a href="#">Project 3 (ISYFL)</a>
+  <a href="https://github.com/alexjp87/If-Sometimes-You-Feel-Lost" target="_blank">Project 3 (ISYFL)</a>
   <a href="#">Project 4 (Circles)</a>
 </nav>
 
