--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 <!-- Full Page Menu for Mobile -->
 <div class="full-page-menu" id="fullPageMenu">
     <a href="#">Home</a>
-    <a href="https://github.com/alexjp87/Wordoodle" target="_blank">Wordoodle</a>
+    <a href="https://github.com/alexjp87/Wordoodle" target="_blank">#1 Wordoodle</a>
     <a href="#">Project 2 (Quizzz)</a>
-    <a href="https://github.com/alexjp87/If-Sometimes-You-Feel-Lost" target="_blank">Project 3 (ISYFL)</a>
+    <a href="https://github.com/alexjp87/If-Sometimes-You-Feel-Lost" target="_blank">#3 ISYFL</a>
     <a href="#">Project 4 (Circles)</a>
 </div>
 
@@ -29,7 +29,7 @@
   <a href="#">Home</a>
   <a href="https://github.com/alexjp87/Wordoodle" target="_blank">Wordoodle</a>
   <a href="#">Project 2 (Quizzz)</a>
-  <a href="https://github.com/alexjp87/If-Sometimes-You-Feel-Lost" target="_blank">Project 3 (ISYFL)</a>
+  <a href="https://github.com/alexjp87/If-Sometimes-You-Feel-Lost" target="_blank">#3 ISYFL</a>
   <a href="#">Project 4 (Circles)</a>
 </nav>
 
