--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <!-- Nav Bar for Desktop -->
 <nav class="navbar">
   <a href="#">Home</a>
-  <a href="https://github.com/alexjp87/Wordoodle" target="_blank">Wordoodle</a>
+  <a href="https://github.com/alexjp87/Wordoodle" target="_blank">#1 Wordoodle</a>
   <a href="#">Project 2 (Quizzz)</a>
   <a href="https://github.com/alexjp87/If-Sometimes-You-Feel-Lost" target="_blank">#3 ISYFL</a>
   <a href="#">Project 4 (Circles)</a>
